fixed something probably

--- a/lite/index.html
+++ b/lite/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Yumns' Homepage</title>
     <link rel="stylesheet" type="text/css" href="assets/css/chota.min.css">
-    <meta http-equiv="Cache-Control" content="public, max-age=604800">
+    <meta http-equiv="content-type" content="public, max-age=604800">
     <!-- Primary Meta Tags -->
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website"/>
@@ -19,7 +19,7 @@
     <meta property="og:title" content="Yumns' Homepage"/>
     <meta property="og:description"
           content="This is my personal homepage, with facts about me. Easily accessible from computers with >512K of RAM free and a browser."/>
-    <meta property="og:image" content="assets/images/cat-photos/cat0.png"/>
+    <meta property="og:image" content="assets/images/cat-photos/cat0.gif"/>
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image"/>
@@ -27,8 +27,8 @@
     <meta property="twitter:title" content="Yumns' Homepage"/>
     <meta property="twitter:description"
           content="This is my personal homepage, with facts about me. Easily accessible from computers with >512K of RAM free and a browser."/>
-    <meta property="twitter:image" content="assets/images/cat-photos/cat0.pngg"/>
-    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
+    <meta property="twitter:image" content="assets/images/cat-photos/cat0.gifg"/>
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.gif">
 
     <!-- Meta Tags Generated with https://metatags.io -->
 
@@ -40,24 +40,19 @@
 
         @keyframes cat-carousel {
             0% {
-                content: url("assets/images/cat-photos/cat0.png");
-            alt("Chicken napping on a chair")
+                content: url("assets/images/cat-photos/cat0.gif") / "Chicken napping on a chair";
             }
             20% {
-                content: url("assets/images/cat-photos/cat1.png");
-            alt("Chicken lying under an apple tree")
+                content: url("assets/images/cat-photos/cat1.gif") / "Chicken lying under an apple tree";
             }
             40% {
-                content: url("assets/images/cat-photos/cat2.png");
-            alt("Chicken sleeping in the garden")
+                content: url("assets/images/cat-photos/cat2.gif") / "Chicken sleeping in the garden";
             }
             60% {
-                content: url("assets/images/cat-photos/cat3.png");
-            alt("Chicken lying on a carpet")
+                content: url("assets/images/cat-photos/cat3.gif") / "Chicken lying on a carpet";
             }
             80% {
-                content: url("assets/images/cat-photos/cat4.png");
-            alt("Chicken resting in a blanket")
+                content: url("assets/images/cat-photos/cat4.gif") / "Chicken resting in a blanket";
             }
         }
 
@@ -72,64 +67,64 @@
 
         @keyframes album-carousel {
             0% {
-                content: url("assets/images/albums/because-the-internet.png");
-            alt("Childish Gambino's Because The Internet")
+                content: url("assets/images/albums/because-the-internet.gif");
+            title("Childish Gambino's Because The Internet")
             }
             7% {
-                content: url("assets/images/albums/never-enough.png");
-            alt("Daniel Caesar's Never Enough")
+                content: url("assets/images/albums/never-enough.gif");
+            title("Daniel Caesar's Never Enough")
             }
             14% {
-                content: url("assets/images/albums/graduation.png");
-            alt("Kanye West's Graduation")
+                content: url("assets/images/albums/graduation.gif");
+            title("Kanye West's Graduation")
             }
             21% {
-                content: url("assets/images/albums/late-registration.png");
-            alt("Kanye West's Late Registration")
+                content: url("assets/images/albums/late-registration.gif");
+            title("Kanye West's Late Registration")
             }
             28% {
-                content: url("assets/images/albums/good-kid-maad-city.png");
-            alt("Kendrick Lamar's Good Kid m.A.A.d City")
+                content: url("assets/images/albums/good-kid-maad-city.gif");
+            title("Kendrick Lamar's Good Kid m.A.A.d City")
             }
             35% {
-                content: url("assets/images/albums/ajab-prem-ki-ghazab-kahani.png");
-            alt("Ajab Prem ki Ghazab Kahani")
+                content: url("assets/images/albums/ajab-prem-ki-ghazab-kahani.gif");
+            title("Ajab Prem ki Ghazab Kahani")
             }
             42% {
-                content: url("assets/images/albums/jab-we-met.png");
-            alt("Jab We Met")
+                content: url("assets/images/albums/jab-we-met.gif");
+            title("Jab We Met")
             }
             49% {
-                content: url("assets/images/albums/main-hoon-na.png");
-            alt("Main Hoon Na")
+                content: url("assets/images/albums/main-hoon-na.gif");
+            title("Main Hoon Na")
             }
             56% {
-                content: url("assets/images/albums/pk.png");
-            alt("PK")
+                content: url("assets/images/albums/pk.gif");
+            title("PK")
             }
             63% {
-                content: url("assets/images/albums/om-shanti-om.png");
-            alt("Om Shanti Om")
+                content: url("assets/images/albums/om-shanti-om.gif");
+            title("Om Shanti Om")
             }
             70% {
-                content: url("assets/images/albums/karz.png");
-            alt("Karz")
+                content: url("assets/images/albums/karz.gif");
+            title("Karz")
             }
             77% {
-                content: url("assets/images/albums/minecraft-volume-alpha.png");
-            alt("C418's Minecraft Volume Alpha")
+                content: url("assets/images/albums/minecraft-volume-alpha.gif");
+            title("C418's Minecraft Volume Alpha")
             }
             84% {
-                content: url("assets/images/albums/minecraft-volume-beta.png");
-            alt("C418's Minecraft Volume Beta")
+                content: url("assets/images/albums/minecraft-volume-beta.gif");
+            title("C418's Minecraft Volume Beta")
             }
             91% {
-                content: url("assets/images/albums/the-art-of-ivry-gitlis.png");
-            alt("The Art of Ivry Gitlis")
+                content: url("assets/images/albums/the-art-of-ivry-gitlis.gif");
+            title("The Art of Ivry Gitlis")
             }
             98% {
-                content: url("assets/images/albums/emil-gilels-beethoven-sonatas.png");
-            alt("Emil Gilels' Pathetique, Clair de Lune, and Moonlight Sonatas")
+                content: url("assets/images/albums/emil-gilels-beethoven-sonatas.gif");
+            title("Emil Gilels' Pathetique, Clair de Lune, and Moonlight Sonatas")
             }
         }
 
@@ -189,7 +184,7 @@
                 </p>
             </article>
             <figure class="col text-center">
-                <img loading="eager" src="assets/images/author.png" alt="A photo of the author">
+                <img loading="eager" src="assets/images/author.gif" alt="A photo of the author" title="The author in Agrasen ki Baoli, Delhi">
                 <figcaption>The author in Agrasen ki Baoli, Delhi</figcaption>
             </figure>
         </div>
@@ -197,8 +192,8 @@
     <section id="cat" class="is-center row">
         <div class="row is-center col-6-lg col-10-md col-12-sm">
             <figure class="col text-center">
-                <img loading="eager" class="cat-carousel" src="assets/images/cat-photos/cat0.png"
-                     alt="Picture of the author's cat">
+                <img loading="eager" class="cat-carousel" src="assets/images/cat-photos/cat0.gif"
+                     alt="Picture of the author's cat" title="Picture of the author's cat">
                 <figcaption>
                     Some pictures of Chicken the cat
                 </figcaption>
@@ -228,7 +223,7 @@
                         <h2>HTML/CSS</h2>
                     </header>
                     <figure class="is-center">
-                        <img src="assets/images/skills/html-css.png" alt="The HTML and CSS logos.">
+                        <img src="assets/images/skills/html-css.gif" alt="The HTML and CSS logos." title="The HTML and CSS logos.">
                     </figure>
                     <footer>
                         <p>
@@ -241,7 +236,7 @@
                         <h2>Bootstrap</h2>
                     </header>
                     <figure class="is-center">
-                        <img src="assets/images/skills/bootstrap.png" alt="The Bootstrap logo.">
+                        <img src="assets/images/skills/bootstrap.gif" alt="The Bootstrap logo." title="The Bootstrap logo.">
                     </figure>
                     <footer>
                         <p>
@@ -255,7 +250,7 @@
                         <h2>JavaScript</h2>
                     </header>
                     <figure class="is-center">
-                        <img src="assets/images/skills/javascript.png" alt="The JavaScript logo.">
+                        <img src="assets/images/skills/javascript.gif" alt="The JavaScript logo." title="The JavaScript logo.">
                     </figure>
                     <footer>
                         <p>
@@ -268,7 +263,7 @@
                         <h2>Discord.py</h2>
                     </header>
                     <figure class="is-center">
-                        <img src="assets/images/skills/discord-py.png" alt="The Discord.py logo.">
+                        <img src="assets/images/skills/discord-py.gif" alt="The Discord.py logo."title="The Discord.py logo.">
                     </figure>
                     <footer>
                         <p>
@@ -292,7 +287,7 @@
                         <h2>tasQer</h2>
                     </header>
                     <figure class="is-center">
-                        <img src="assets/images/projects/tasQer.png" alt="The HTML and CSS logos.">
+                        <img src="assets/images/projects/tasQer.gif" alt="The tasQer logo." title="The tasQer logo.">
                     </figure>
                     <footer>
                         <p>
@@ -305,7 +300,7 @@
                         <h2>Yurdle</h2>
                     </header>
                     <figure class="is-center">
-                        <img src="assets/images/projects/yurdle.png" alt="The Bootstrap logo.">
+                        <img src="assets/images/projects/yurdle.gif" alt="A Yurdle game." title="A Yurdle game.">
                     </figure>
                     <footer>
                         <p>
@@ -318,7 +313,7 @@
                         <h2>Nut Bot</h2>
                     </header>
                     <figure class="is-center">
-                        <img src="assets/images/projects/nut-bot.png" alt="The JavaScript logo.">
+                        <img src="assets/images/projects/nut-bot.gif" alt="The Nut Bot icon." title="The Nut Bot icon.">
                     </figure>
                     <footer>
                         <p>
@@ -331,8 +326,8 @@
                         <h2>Carousel Maker</h2>
                     </header>
                     <figure class="is-center">
-                        <img src="assets/images/projects/bootstrap-carousel-maker.png"
-                             alt="The Discord.py logo.">
+                        <img src="assets/images/projects/bootstrap-carousel-maker.gif"
+                             alt="The carousel maker window." title="The carousel maker window.">
                     </figure>
                     <footer>
                         <p>
@@ -347,8 +342,8 @@
         <div class="is-center col-6-lg col-10-md col-12-sm">
             <figure class="col text-center">
                 <h1 class="text-center">More About Me</h1>
-                <img class="album-carousel" src="assets/images/albums/because-the-internet.png"
-                     alt="Pictures of albums the author likes">
+                <img class="album-carousel" src="assets/images/albums/because-the-internet.gif"
+                     alt="Pictures of albums the author likes" title="Pictures of albums the author likes">
                 <figcaption>
                     Some albums I like
                 </figcaption>
