--- a/lite/index.html
+++ b/lite/index.html
@@ -27,7 +27,7 @@
     <meta property="twitter:title" content="Yumns' Homepage"/>
     <meta property="twitter:description"
           content="This is my personal homepage, with facts about me. Easily accessible from computers with >512K of RAM free and a browser."/>
-    <meta property="twitter:image" content="assets/images/cat-photos/cat0.gifg"/>
+    <meta property="twitter:image" content="assets/images/cat-photos/cat0.gif"/>
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.gif">
 
     <!-- Meta Tags Generated with https://metatags.io -->
