Updated links in index.html

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <article class="row is-center col-6-lg col-10-md col-12-sm cardsSameHeight">
                 <div class="card col-6">
                     <header>
-                        <h2>tasQer</h2>
+                        <h2><a href="/projects/tasQer/">tasQer</a></h2>
                     </header>
                     <figure class="is-center">
                         <img src="assets/images/projects/tasQer.gif" alt="The tasQer logo." title="The tasQer logo.">
@@ -297,7 +297,7 @@
                 </div>
                 <div class="card col-6">
                     <header>
-                        <h2>Yurdle</h2>
+                        <h2><a href="/projects/Yurdle/">Yurdle</a></h2>
                     </header>
                     <figure class="is-center">
                         <img src="assets/images/projects/yurdle.gif" alt="A Yurdle game." title="A Yurdle game.">
@@ -310,7 +310,7 @@
                 </div>
                 <div class="card col-6">
                     <header>
-                        <h2>Nut Bot</h2>
+                        <h2><a href="https://top.gg/bot/780971224146640926">Nut Bot</a></h2>
                     </header>
                     <figure class="is-center">
                         <img src="assets/images/projects/nut-bot.gif" alt="The Nut Bot icon." title="The Nut Bot icon.">
@@ -323,7 +323,7 @@
                 </div>
                 <div class="card col-6">
                     <header>
-                        <h2>Carousel Maker</h2>
+                        <h2><a href="/projects/bootstrapcarouselmaker.html">Carousel Maker</a></h2>
                     </header>
                     <figure class="is-center">
                         <img src="assets/images/projects/bootstrap-carousel-maker.gif"
